# web

./: .env  Cargo.toml  Dockerfile  Readme.md  askama.toml  docker-compose.yml
src/: main.rs
src/backend/: error.rs  main_route.rs  mod.rs
src/backend/middlewares/: mod.rs  mw_auth_jwt.rs
src/backend/models/: mod.rs  tokenclaims.rs  user.rs
src/backend/models/dto/: login_user_dto.rs  mod.rs  register_user_dto.rs
src/backend/routes/: login_route.rs  main_route.rs  mod.rs
src/backend/utils/: config.rs  config_app.rs  database_connection.rs  mod.rs  response_return_types.rs
src/frontend/: mod.rs  route.rs
src/frontend/pages/: count.rs  index.rs  mod.rs
src/frontend/templates/: count.html  index.html
templates/: index.html
