[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum", "serde", "serde_json"] }



axum = { version = "0.7", features = ["macros"] }
hyper = { version = "1.0.1", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
strum_macros = "0.25.3"
askama_axum = "0.4.0"
axum-extra = { version = "0.7.2", features = ["cookie"] }
hyper-util = "0.1.2"
openssl = "0.10.62"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
tokio-openssl = "0.6.4"

mongodb = "2.1"
jsonwebtoken = "8.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
argon2 = "0.5.2"
env_logger = "0.10.1"
log = "0.4.20"
chrono = { version = "0.4.31", features = ["serde"] }
time = "0.3.30"



[dev-dependencies]
cargo-watch = "8.4.1"
