[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#frontend
askama = { version = "0.12.1", features = ["with-axum", "serde", "serde_json"] }
#backend
axum = { version = "0.7.4", features = ["macros"] }
hyper = { version = "1.1.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.34.1", features = ["full"] }
tower = "0.4.13"
strum_macros = "0.26.1"
askama_axum = "0.4.0"
axum-extra = { version = "0.9.2", features = ["cookie"] }
hyper-util = "0.1.3"
openssl = "0.10.62"
futures-util = { version = "0.3.30", default-features = false, features = ["alloc"] }
tokio-openssl = "0.6.4"

mongodb = "2.8.0"
jsonwebtoken = "9.2.0"
rand_core = { version = "0.6.4", features = ["std"] }
argon2 = "0.5.2"
env_logger = "0.11.1"
log = "0.4.20"
chrono = { version = "0.4.33", features = ["serde"] }
time = "0.3.30"
cookie = "0.17.0"
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
dotenv = "0.15.0"
bson = "1.2.1"


[dev-dependencies]
cargo-watch = "8.4.1"
